value api: move Value to `value` package
- code cleanup